fix: add gap to the login form

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -64,14 +64,21 @@ body{
 .login-form{
   display: flex;
   flex-direction: column;
-  width: 400px;
-  height: 300px;
+  width: 300px;
+  height: 200px;
   justify-content: center;
   align-items: center;
   padding: 15px;
+  border-radius: 6px;
+  
 }
 
 .login-form > form{
   display: flex;
   flex-direction: column;
+  gap: 8px;
+}
+
+.login-form > form > button{
+  padding: 8px;
 }
